kubernetes/beat-deployment.yaml
# kubetpl:syntax:$
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cabot-beat
  labels:
    service: cabot-beat
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: cabot-beat
    spec:
      containers:
      - name: beat
        image: cabotapp/cabot:${CABOT_VERSION}
        args:
        - celery
        - beat
        - -A
        - cabot
      restartPolicy: Always
