kubernetes/rabbitmq-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: rabbitmq
  name: rabbitmq
  namespace: cabot
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3.6-alpine
        name: rabbitmq
      restartPolicy: Always
