kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cabot-postgres
spec:
  ports:
  - port: 5432
  selector:
    service: cabot-postgres
