kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cabot-rabbitmq
spec:
  ports:
  - port: 5672
  selector:
    service: cabot-rabbitmq
