kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: cabot
spec:
  ports:
  - name: http
    port: 5000
  selector:
    service: web
