kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cabot-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - cabot-test.arachnys.com
    secretName: cabot-tls
  rules:
  - host: cabot-test.arachnys.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cabot-web
          servicePort: 5000
